[tool.poetry]
name = "btg"
version = "0.2.0"
description = "This tool allows you to qualify one or more potential malicious observables of various type (URL, MD5, SHA1, SHA256, SHA512, IPv4, IPv6, domain etc..)."
authors = [
    "Maxou56800 <contact@maxou56800.fr>",
    "Tanguy Becam",
    "Alexandra Toussaint",
    "Hicham Megherbi",
    "Robin Marsollier"
]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
validators = "^0.20.0"
requests-cache = ">=1.2.0"
netaddr = ">=1.2.1"
rq = ">=1.16.2"
redis = ">=5.0.4"
tldextract = ">=5.1.2"
aiohttp = ">=3.9.5"
pycti = ">=6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
